2007-09-11  Peter Williams  <peter@newton.cx>

	* omega/gtkUtil.py (OmegaDemoWindow.__init__): Set some more window
	properties to try to make things slightly prettier, sort of.

	* omega/rect.py (LinearAxisPainter.getTickLocations): Raise a more
	helpful exception if min = max.

2007-07-16  Peter Williams  <peter@newton.cx>

	* omega/util.py (makeQuickRectDataPainter): Allow the caller to specify
	a desired point stamp.

	* omega/stamps.py (Box.doPaint): Make stamps bigger by default; collect
	the default value of the size parameter in one variable.
	
2007-06-29  Peter Williams  <peter@newton.cx>

	* omega/gtkUtil.py (LiveDisplay.linger): Make this a timeout since the
	idle chews up CPU.

2007-06-28  Peter Williams  <peter@newton.cx>

	* omega/gtkUtil.py (LiveDisplay.linger): New function: block the caller
	until the LiveDisplay has been destroyed by the user. Useful for 
	semi-interactive programs not run from IPython.

2007-04-16  Peter Williams  <peter@newton.cx>

	* demo/sinc-ps.py (pl): Update to new dump() API.

	* omega/util.py (makeQuickPipeline): Also return the RectPainter so that
	the caller can futz with it.

2007-04-11  Peter Williams  <peter@newton.cx>

	* omega/util.py (makeQuickRectDataPainter): Update for better bounds
	setting.

	* omega/rect.py (RectPlot.quickAdd): Add a default template if none
	is specified and we have a FieldPainter to reference.

2007-03-22  Peter Williams  <peter@newton.cx>

	* omega/util.py (dump): Continue moving to a more 
	pipeline-centric model.

2007-03-22  Peter Williams  <peter@newton.cx>

	* omega/__init__.py (RSP): Add a shortcut for 
	util.makeRectSkeletonPipeline.

	* omega/rect.py (LogarithmicAxis.getMin): Add 'min' and 'max'
	properties that help us behave isomorphically to a LinearAxis.
	(LogarithmicAxisPainter.getTickLocations): Rework the code here
	to reset the variables from integers every decade, to avoid
	rounding errors (which of course are likely to be a big deal if